package com.example.utrack.model

class Exercise {
}