package com.example.utrack.model

class RecommendedExercise {
}