package com.example.utrack.model

class Sensor {
}