package com.example.utrack.model

class Training {
}