@startuml

class Data {
}
class Statistic {
}
class Sensor {
}
class Training {
}
class Recommended_Exercise {
}
class Unregistered_User {
}
class uTrack {
}
class User {
}
class Bicycle {
}
class Exercise {
}

uTrack "1" o-- "*" Data : "Has"
uTrack "1" o-- "*" User : "Has"
Data "*" -- "*" Statistic : "Creates"
User "1" -- "*" Statistic : "Visualizes"
Unregistered_User "1" -- "1" User : "Transforms to"
User "1" *-- "1" Bicycle : "Has"
User "1" -- "*" Training : "Does"
Training "1" *-- "1..*" Exercise : "Contains"
Training "1" o-- "0,1" Recommended_Exercise : "Has"
Training "1" -- "*" Sensor : "Uses"
Sensor "1" -- "*" Data : "Provides"

@enduml